Auto (#29)
* Add autonomous command into seperate file

* remove unnecessary import

* Variable names/Formatting

* more formatting

* attempt custom trajectory (need to configure robot characterization)

Co-authored-by: rjawesome <aonedtop@gmail.com>