@@ -7,6 +7,7 @@ import edu.wpi.first.wpilibj.Timer;
 import edu.wpi.first.wpilibj.controller.RamseteController;
 import edu.wpi.first.wpilibj.geometry.Pose2d;
 import edu.wpi.first.wpilibj.geometry.Rotation2d;
+import edu.wpi.first.wpilibj.geometry.Translation2d;
 import edu.wpi.first.wpilibj.kinematics.ChassisSpeeds;
 import edu.wpi.first.wpilibj.kinematics.DifferentialDriveWheelSpeeds;
 import edu.wpi.first.wpilibj.trajectory.Trajectory;
@@ -14,7 +15,7 @@ import edu.wpi.first.wpilibj.trajectory.TrajectoryConfig;
 import edu.wpi.first.wpilibj.trajectory.TrajectoryGenerator;
 import edu.wpi.first.wpilibj.util.Units;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class AutonomousCommand extends CommandBase {
   private final Timer m_timer = new Timer();
@@ -24,17 +25,25 @@ public class AutonomousCommand extends CommandBase {
   private DifferentialDriveWheelSpeeds m_prevSpeeds;
   private double m_prevTime;
 
-  public AutonomousCommand (Drivetrain drivetrain) {
+  public AutonomousCommand(Drivetrain drivetrain) {
     m_drive = drivetrain;
 
     TrajectoryConfig config = new TrajectoryConfig(Units.feetToMeters(5.0), Units.feetToMeters(5.0));
     config.setKinematics(m_drive.getKinematics());
 
-    m_trajectory = TrajectoryGenerator.generateTrajectory(Arrays.asList(new Pose2d(),
-        new Pose2d(1.0, 0, new Rotation2d()), new Pose2d(2.3, 1.2, Rotation2d.fromDegrees(90.0))), config);
+    m_trajectory = TrajectoryGenerator.generateTrajectory(
+        // Start at the origin facing the +X direction
+        new Pose2d(0, 0, new Rotation2d(0)),
+        // Pass through these two interior waypoints, making an 's' curve path
+        List.of(new Translation2d(1, 1), 
+        new Translation2d(2, 1)),
+        // End 3 meters straight ahead of where we started, facing forward
+        new Pose2d(3, 0, new Rotation2d(0)),
+        // Pass config
+        config);
 
     m_follower = new RamseteController(Constants.Autonomous.kB, Constants.Autonomous.kZeta);
-    
+
     addRequirements(drivetrain);
   }
 
@@ -43,11 +52,8 @@ public class AutonomousCommand extends CommandBase {
     m_prevTime = -1;
     var initialState = m_trajectory.sample(0);
     var angularVelocity = initialState.curvatureRadPerMeter * initialState.velocityMetersPerSecond;
-    m_prevSpeeds = m_drive.getKinematics().toWheelSpeeds(
-      new ChassisSpeeds(
-        initialState.velocityMetersPerSecond, 0, angularVelocity
-      )
-    );
+    m_prevSpeeds = m_drive.getKinematics()
+        .toWheelSpeeds(new ChassisSpeeds(initialState.velocityMetersPerSecond, 0, angularVelocity));
     m_timer.reset();
     m_timer.start();
     m_drive.getLeftPIDController().reset();
@@ -65,31 +71,25 @@ public class AutonomousCommand extends CommandBase {
       return;
     }
 
-    var targetWheelSpeeds =
-        m_drive.getKinematics().toWheelSpeeds(
-            m_follower.calculate(m_drive.getPose(), m_trajectory.sample(curTime)));
+    var targetWheelSpeeds = m_drive.getKinematics()
+        .toWheelSpeeds(m_follower.calculate(m_drive.getPose(), m_trajectory.sample(curTime)));
 
     var leftSpeedSetpoint = targetWheelSpeeds.leftMetersPerSecond;
     var rightSpeedSetpoint = targetWheelSpeeds.rightMetersPerSecond;
 
     var speeds = m_drive.getSpeeds();
 
-    double leftFeedforward =
-        m_drive.getFeedforward().calculate(
-            leftSpeedSetpoint, (leftSpeedSetpoint - m_prevSpeeds.leftMetersPerSecond) / dt);
+    double leftFeedforward = m_drive.getFeedforward().calculate(leftSpeedSetpoint,
+        (leftSpeedSetpoint - m_prevSpeeds.leftMetersPerSecond) / dt);
 
-    double rightFeedforward =
-        m_drive.getFeedforward().calculate(
-            rightSpeedSetpoint, (rightSpeedSetpoint - m_prevSpeeds.rightMetersPerSecond) / dt);
+    double rightFeedforward = m_drive.getFeedforward().calculate(rightSpeedSetpoint,
+        (rightSpeedSetpoint - m_prevSpeeds.rightMetersPerSecond) / dt);
 
-    double leftOutput =
-        leftFeedforward
-            + m_drive.getLeftPIDController().calculate(speeds.leftMetersPerSecond, leftSpeedSetpoint);
+    double leftOutput = leftFeedforward
+        + m_drive.getLeftPIDController().calculate(speeds.leftMetersPerSecond, leftSpeedSetpoint);
 
-    double rightOutput =
-        rightFeedforward
-            + m_drive.getRightPIDController().calculate(
-                speeds.rightMetersPerSecond, rightSpeedSetpoint);
+    double rightOutput = rightFeedforward
+        + m_drive.getRightPIDController().calculate(speeds.rightMetersPerSecond, rightSpeedSetpoint);
 
     m_drive.setOutputVolts(leftOutput, rightOutput);
     m_prevSpeeds = targetWheelSpeeds;
